# code-rag-spike

./: .env.example  README.md  config.py  main.py  pyproject.toml
design/: code-parser-idea.py  ingestion-pipeline.md  retrieval-pipeline.md
ingestion/: __init__.py  config.py  ingest.py  utils.py
opensearch/: README.md  docker-compose.yml
pipelines/code-rag/: __init__.py  pipeline_wrapper.py
retrieval/: __init__.py  pipeline.py  query.py
